compiler/tools/fpp-check/test/state_machine/types/array_undef_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/types/array_undef_constant.fpp:2.29
  array A = [3] U32 default a
                            ^
error: symbol a is not defined
note: looking for a constant here
